RESOLVED FIXED65074
unicode-bidi:-webkit-plaintext does not work on <textarea>
https://bugs.webkit.org/show_bug.cgi?id=65074
Summary unicode-bidi:-webkit-plaintext does not work on <textarea>
Aharon (Vladimir) Lanin
Reported 2011-07-24 05:59:28 PDT
Created attachment 101827 [details] test case https://bugs.webkit.org/show_bug.cgi?id=50949 added support for unicode-bidi:-webkit-paintext, and made it the default for <pre dir=auto> and <textarea dir=auto>. However, although both dir=auto and unicode-bidi:-webkit-paintext work for <pre>, they do not work for <textarea>, where all paragraphs continue to have the same direction.
Attachments
test case (642 bytes, text/html)
2011-07-24 05:59 PDT, Aharon (Vladimir) Lanin
no flags
Patch (37.84 KB, patch)
2011-07-26 16:10 PDT, Levi Weintraub
no flags
Patch for landing (37.73 KB, patch)
2011-07-27 12:10 PDT, Levi Weintraub
no flags
Patch for landing (37.80 KB, patch)
2011-07-27 12:40 PDT, Levi Weintraub
no flags
Levi Weintraub
Comment 1 2011-07-26 16:01:42 PDT
Thanks to Ryosuke for pointing me to the right spot for the fix. Uploading momentarily.
Levi Weintraub
Comment 2 2011-07-26 16:10:00 PDT
Created attachment 102069 [details] Patch Will re-upload with linux expectations once it fails on EWS. (Ugh :p)
Levi Weintraub
Comment 3 2011-07-27 11:10:57 PDT
Comment on attachment 102069 [details] Patch Looks like the Linux bot isn't being nice and uploading results anymore. Anyone care to review?
Ryosuke Niwa
Comment 4 2011-07-27 11:45:00 PDT
Comment on attachment 102069 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=102069&action=review > LayoutTests/fast/text/international/unicode-bidi-plaintext-in-textarea.html:1 > +<!DOCTYPE html> BOM? Please remove it and add a meta tag for content-type instead.
Levi Weintraub
Comment 5 2011-07-27 12:10:11 PDT
Created attachment 102165 [details] Patch for landing
Ryosuke Niwa
Comment 6 2011-07-27 12:36:49 PDT
Comment on attachment 102165 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=102165&action=review > LayoutTests/fast/text/international/unicode-bidi-plaintext-in-textarea.html:1 > +<!DOCTYPE html> You didn't remove DOM :(
Levi Weintraub
Comment 7 2011-07-27 12:40:46 PDT
Created attachment 102171 [details] Patch for landing
Levi Weintraub
Comment 8 2011-07-27 16:16:29 PDT
Comment on attachment 102171 [details] Patch for landing Clearing flags on attachment: 102171 Committed r91879: <http://trac.webkit.org/changeset/91879>
Levi Weintraub
Comment 9 2011-07-27 16:18:07 PDT
Note You need to log in before you can comment on or make changes to this bug.