unicode-bidi:-webkit-plaintext does not work on <textarea> https://bugs.webkit.org/show_bug.cgi?id=65074

Reviewed by Ryosuke Niwa.

Source/WebCore:

Fixing unicode-bidi style propagation into text control shadow trees.

Test: fast/text/international/unicode-bidi-plaintext-in-textarea.html

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::adjustInnerTextStyle):

LayoutTests:

Fixing unicode-bidi propagation into text controls.

* fast/text/international/unicode-bidi-plaintext-in-textarea.html: Added.
* platform/mac/fast/text/international/unicode-bidi-plaintext-in-textarea-expected.png: Added.
* platform/mac/fast/text/international/unicode-bidi-plaintext-in-textarea-expected.txt: Added.


Canonical link: https://commits.webkit.org/81043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91879 268f45cc-cd09-0410-ab3c-d52691b4dbfc